世界遺産登録機能追加｜大陸と国データ追加｜世界遺産詳細ページの写真の部分まで完成

--- a/app/assets/stylesheets/module/mobile_header.scss
+++ b/app/assets/stylesheets/module/mobile_header.scss
@@ -1,12 +1,16 @@
 .mobile-header {
   display: none;
   background-color: #fff;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 @media (max-width: 767px) {
   .mobile-header {
     display: block;
     width: 100vw;
+    height: 60px;
     &__hr {
       margin: 0;
       border: 0.5px solid #cccaca;
