--- a/app/assets/stylesheets/module/heritage_header_block.scss
+++ b/app/assets/stylesheets/module/heritage_header_block.scss
@@ -1,8 +1,13 @@
-.heritage-link-group {
+.heritage-header-block {
   position: relative;
-  padding: 20px 25vw 0 25vw;
+  padding: 0 30px;
   font-size: 2rem;
   white-space: nowrap;
+  background-color: #fff;
+  &__hr {
+    margin: 0 0 20px 0;
+    width: 100%;
+  }
   & ul {
     display: flex;
     gap: 30px;
@@ -42,20 +47,29 @@
 .scrollable {
   overflow-x: auto;
 }
-.heritage-link-group::after {
-  width: 100vw;
-  content: '';
-  position: absolute;
+.heritage-header-wrapper {
+  position: fixed;
+  top: 90px;
+  right: 0;
   left: 0;
-  bottom: 0;
-  height: 2px;
-  box-shadow: 0 2px 5px #aaaaaa;
+  width: 70vw;
+  margin: 0 auto;
+  height: 90px;
+  z-index: 200;
 }
 
 @media (max-width: 767px) {
-  .heritage-link-group {
+  .heritage-header-block {
     padding-left: 20px;
     width: 100vw;
     font-size: 1.5rem;
+    margin-bottom: 60px;
+    height: 60px;
+  }
+  .heritage-header-wrapper {
+    top: 60px;
+    left: 0;
+    width: 100vw;
+    margin: 0;
   }
 }
