--- a/app/assets/stylesheets/module/heritage_img_area.scss
+++ b/app/assets/stylesheets/module/heritage_img_area.scss
@@ -1,36 +1,43 @@
 .heritage-img-area {
-  width: 80vw;
+  margin: 180px auto 20px auto;
+  width: 70vw;
   aspect-ratio: 8 / 3;
-  margin: 20px auto;
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: repeat(4, 25%);
+  grid-template-rows: repeat(2, 50%);
   gap: 5px;
-  &__main-img {
+  & img {
     width: 100%;
     height: 100%;
   }
-}
-.heritage-img-right-area {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr 1fr;
-  gap: 5px;
-  :first-child, :nth-child(2), :nth-child(3), :nth-child(4) {
-    width: 100%;
-    height: 100%;
+  :first-child {
+    grid-column: 1 / 3;
+    grid-row: 1 / 3;
+    border-radius: 20px 0 0 20px;
+  }
+  :nth-child(3) {
+    border-radius: 0 20px 0 0;
+  }
+  :nth-child(5) {
+    border-radius: 0 0 20px 0;
   }
 }
 
 @media (max-width: 767px) {
   .heritage-img-area {
     display: block;
+    margin-top: 140px;
     width: 90%;
-    &__main-img {
+    :first-child {
       width: 100%;
       height: auto;
+      border-radius: 20px;
     }
-  }
-  .heritage-img-right-area {
-    display: none;
+    :nth-child(2),
+    :nth-child(3),
+    :nth-child(4),
+    :nth-child(5) {
+      display: none;
+    }
   }
 }
