--- a/app/views/heritages/show.html.erb
+++ b/app/views/heritages/show.html.erb
@@ -1,20 +1,44 @@
-<iframe
-  width="600"
-  height="450"
-  style="border:0"
-  loading="lazy"
-  allowfullscreen
-  src="https://www.google.com/maps/embed/v1/streetview?key=AIzaSyCaTriiOQ42k4fd1_pQeYWCjDjIE8F5D4A&location=40.689247,-74.044502&heading=210&pitch=10&fov=35">
-</iframe>
+<div class="heritage-header-wrapper">
+  <nav class="heritage-header-block" id="nav-link">
+    <hr class="heritage-header-block__hr">
+    <ul id="link-list">
+      <li class="active">
+        <%= image_tag "book.svg", size: "25x25" %>
+        基本情報
+        </li>
+      <li>
+        <%= image_tag "star.svg", size: "25x25" %>
+        見どころ
+      </li>
+      <li>
+        <%= image_tag "review.svg", size: "25x25" %>
+        口コミ
+      </li>
+      <li>
+        <%= image_tag "tour.svg", size: "25x25" %>
+        ツアー
+      </li>
+      <li>
+        <%= image_tag "photo.svg", size: "25x25" %>
+        写真
+      </li>
+    </ul>
+    <%= image_tag "arrow_foward.svg", size: "20x20", class: "heritage-header-block__arrow-img", id:"arrow-img" %>
+  </nav>
+</div>
 
 <div class="heritage-img-area">
-  <%= image_tag "heritage/マチュピチュ/2.png", class: "heritage-img-area__main-img" %>
-  <div class="heritage-img-right-area">
+  <% if @heritage.images.attached? %>
+    <% @heritage.images.each do |image| %>
+      <%= image_tag image %>
+    <% end %>
+  <% else %>
+    <%= image_tag "heritage/マチュピチュ/1.png" %>
     <%= image_tag "heritage/マチュピチュ/2.png" %>
     <%= image_tag "heritage/マチュピチュ/3.png" %>
     <%= image_tag "heritage/マチュピチュ/4.png" %>
     <%= image_tag "heritage/マチュピチュ/5.png" %>
-  </div>
+  <% end %>
 </div>
 
 <div class="heritage-detail-info">
@@ -36,16 +60,7 @@
   </div>
 </div>
 
-<nav class="heritage-link-group" id="nav-link">
-  <ul id="link-list">
-    <li class="active">基本情報</li>
-    <li>口コミ</li>
-    <li>人気ポイント</li>
-    <li>アクセス</li>
-    <li>ツアー</li>
-  </ul>
-  <%= image_tag "arrow_foward.svg", size: "20x20", class: "heritage-link-group__arrow-img", id:"arrow-img" %>
-</nav>
+
 
 <div class="heritage-review-block">
   <%= render 'shared/post_list' %>
@@ -54,7 +69,7 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
     // タップされた要素にクラスを追加
-    var navItems = document.querySelectorAll('.heritage-link-group li');
+    var navItems = document.querySelectorAll('.heritage-header-block li');
     navItems.forEach(item => {
       item.addEventListener('click', function() {
         navItems.forEach(i => i.classList.remove('active'));
