--- a/app/assets/stylesheets/module/heritage_charm_block.scss
+++ b/app/assets/stylesheets/module/heritage_charm_block.scss
@@ -1,6 +1,9 @@
 .heritage-charm-block {
   width: 70vw;
+ 
   margin: 0 auto;
+  padding: 0 20px;
+
   &__title {
     font-weight: bold;
     text-align: center;
@@ -10,6 +13,7 @@
     text-underline-offset: 10px;
     padding: 30px 0;
   }
+
   &__content {
     width: 60%;
     margin: 0 auto;
@@ -17,7 +21,10 @@
     font-size: 1.7rem;
     padding-bottom: 50px;
   }
+
   &__sub-title {
+    width: 90%;
+    margin: 0 auto;
     font-weight: bold;
     font-size: 2.5rem;
     padding: 30px 0;
@@ -38,6 +45,7 @@
       line-height: 3.5rem;
     }
     &__sub-title {
+      width: 100%;
       font-weight: bold;
       font-size: 2.5rem;
       padding: 30px 0;
