--- a/app/assets/stylesheets/module/heritage_review_block.scss
+++ b/app/assets/stylesheets/module/heritage_review_block.scss
@@ -1,11 +1,18 @@
 .heritage-review-block {
-  padding: 20px 0;
-  width: 50vw;
+  padding: 50px 0;
+  width: 70vw;
+
   margin: 0 auto;
-  & .user-post-heritage-block {
-    display: none;
-  }
 }
+.heritage-score-inner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  &__score {
+    padding-left: 20px;
+    font-size: 100px;
+  }
+} 
 
 @media (max-width: 767px) {
   .heritage-review-block {
