--- a/app/assets/stylesheets/module/heritage_review_block.scss
+++ b/app/assets/stylesheets/module/heritage_review_block.scss
@@ -1,21 +1,38 @@
 .heritage-review-block {
   padding: 50px 0;
   width: 70vw;
-
   margin: 0 auto;
+  &__show-all-reviews {
+    display: inline-block;
+    margin: 50px;
+    cursor: pointer;
+    border: 1px solid #000000;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-size: 2rem;
+  }
 }
 .heritage-score-inner {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
   &__score {
     padding-left: 20px;
-    font-size: 100px;
+    font-size: 4rem;
   }
-} 
+}
 
 @media (max-width: 767px) {
   .heritage-review-block {
-    width: 100vw;
+    width: 80vw;
+    &__show-all-reviews {
+      display: block;
+      padding: 10px 20px;
+      border-radius: 10px;
+      font-size: 2rem;
+      margin: 20px auto;
+      text-align: center;
+    }
   }
 }
