--- a/app/assets/stylesheets/module/pc_header.scss
+++ b/app/assets/stylesheets/module/pc_header.scss
@@ -2,7 +2,7 @@
   height: 90px;
   width: 70vw;
   margin: 0 auto;
-  padding: 30px;
+  padding: 30px 0;
   display: flex;
   align-items: center;
   background-color: #fff;
