--- a/app/assets/stylesheets/module/login_form.scss
+++ b/app/assets/stylesheets/module/login_form.scss
@@ -53,6 +53,7 @@
     border: none;
     padding: 30px 20px;
     transform: none;
+    margin-top: 180px;
     &__form-title {
       padding-bottom: 0;
     }
