--- a/app/assets/stylesheets/module/heritage_header_block.scss
+++ b/app/assets/stylesheets/module/heritage_header_block.scss
@@ -52,11 +52,16 @@
 .heritage-header-wrapper {
   background-color: #fff;
   position: fixed;
-  top: 90px;
+  top: 80px;
   right: 0;
   left: 0;
-  height: 90px;
-  z-index: 200;
+  z-index: 100;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  &__hr {
+    width: 100vw;
+    border: 0.5px solid #ebebeb;
+    margin-top: 0;
+  }
 }
 
 @media (max-width: 767px) {
@@ -64,14 +69,15 @@
     padding-left: 20px;
     width: 100vw;
     font-size: 1.5rem;
-    margin-bottom: 60px;
-    height: 60px;
   }
-
   .heritage-header-wrapper {
-    top: 60px;
+    top: 70px;
     left: 0;
     width: 100vw;
     margin: 0;
+    padding-top: 10px;
+    &__hr {
+      display: none;
+    }
   }
 }
