--- a/app/assets/stylesheets/module/pc_header_menu.scss
+++ b/app/assets/stylesheets/module/pc_header_menu.scss
@@ -8,23 +8,26 @@
   position: relative;
   gap: 15px;
   align-items: center;
+
   &__user-icon {
     border-radius: 50%;
   }
 }
+
 .hover-menu-list {
   display: none;
 }
+
 .pc-header-menu:hover,
 .hover-menu-list:hover {
   .hover-menu-list {
     display: block;
-    position: absolute;
-    top: 50px;
-    right: 0;
+    position: fixed;
+    top: 60px;
+    right: 5vw;
     width: 240px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
-    z-index: 10;
+    z-index: 500;
     padding: 20px;
     background-color: #fff;
 
