--- a/app/assets/stylesheets/module/reviews_popup.scss
+++ b/app/assets/stylesheets/module/reviews_popup.scss
@@ -4,7 +4,7 @@
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 20px;
-  background-color: white;
+  background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 20px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
