--- a/app/assets/stylesheets/module/top_header.scss
+++ b/app/assets/stylesheets/module/top_header.scss
@@ -1,19 +1,37 @@
 .top-header {
   position: fixed;
-  top: 90px;
+  top: 80px;
   left: 0;
   width: 100vw;
-  height: 90px;
+  padding: 0 20px;
   background-color: #fff;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  &__hr {
+    width: 100vw;
+    border: 0.5px solid #ebebeb;
+    margin: 0;
+  }
 }
 .top-link-list {
   display: flex;
   gap: 20px;
   width: 90vw;
   margin: 0 auto;
+  padding: 10px 0;
 }
 .link-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+
+@media (max-width: 767px) {
+  .top-header {
+    &__hr {
+      display: none;
+    }
+  }
+  .top-link-list {
+    padding: 5px 0;
+  }
 }
