--- a/app/views/heritages/index.html.erb
+++ b/app/views/heritages/index.html.erb
@@ -1,5 +1,6 @@
 <% provide(:title, '世界遺産') %>
 <div class="top-header">
+  <hr class="top-header__hr">
   <nav class="top-link-list">
     <%= link_to root_path, class: "link-container" do %>
       <%= image_tag "book.svg", size: "25x25" %>
