--- a/app/assets/stylesheets/module/area_main_block.scss
+++ b/app/assets/stylesheets/module/area_main_block.scss
@@ -2,12 +2,96 @@
   width: 100vw;
   display: flex;
 }
+
 .heritage-cards-block {
   flex: 2;
   width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  padding: 0 30px;
+  gap: 20px;
+  height: 80vh;
+  scroll-behavior: smooth;
+  overflow-y: auto;
 }
+
 .area-map-block {
   flex: 1;
   width: 100%;
-  height: 100vh;
+  height: 80vh;
+}
+
+.area-heritage-card {
+  width: calc(49% - 20px);
+  height: auto;
+  margin-bottom: 30px;
+  background-color: #fff;
+  position: relative;
+
+  &__close-btn {
+    display: none;
+  }
+
+  &__img {
+    width: 100%;
+    aspect-ratio: 7 / 5;
+    border-radius: 20px;
+  }
+
+  &__name {
+    font-size: 2rem;
+    padding-top: 10px;
+  }
+}
+
+@media (max-width: 767px) {
+  .area-main-block {
+    display: block;
+  }
+
+  .heritage-cards-block {
+    display: block;
+    height: auto;
+  }
+
+  .area-map-block {
+    width: 100vw;
+    height: calc(100vh - 120px);
+  }
+
+  .area-heritage-card {
+    z-index: 10;
+    position: fixed;
+    bottom: -100vh;
+    left: 50%;
+    transition: all 0.2s;
+    transform: translate(-50%, 0);
+    width: 90vw;
+    margin: 0 auto;
+    height: auto;
+    border: 0.5px solid #cacaca;
+    border-radius: 20px;
+
+    &__close-btn {
+      display: block;
+      position: absolute;
+      top: 20px;
+      right: 20px;
+      cursor: pointer;
+    }
+
+    &__img {
+      width: 90vw;
+      border-radius: 20px 20px 0 0;
+    }
+
+    &__name {
+      padding: 10px 20px;
+    }
+  }
+
+  .area-heritage-card-show {
+    bottom: 40px;
+  }
 }
