--- a/app/views/heritages/new.html.erb
+++ b/app/views/heritages/new.html.erb
@@ -4,6 +4,8 @@
     <%= f.text_field :name, placeholder: "世界遺産名", class: 'heritage-form__name' %>
     <%= f.text_area :content, placeholder: "世界遺産の概要", class: 'heritage-form__content' %>
     <%= f.text_field :country, placeholder: "国名", class: 'heritage-form__country-name' %>
+    <%= f.text_field :lat, placeholder: "緯度", class: 'heritage-form__lat' %>
+    <%= f.text_field :lng, placeholder: "経度", class: 'heritage-form__lng' %>
     <%= f.file_field :images, multiple: true, class: "heritage-form__image" %>
     <%= f.submit "登録", class: "heritage-form__submit" %>
   <% end %>
