--- a/app/assets/stylesheets/module/pc_header.scss
+++ b/app/assets/stylesheets/module/pc_header.scss
@@ -6,6 +6,7 @@
   align-items: center;
   background-color: #fff;
   height: 80px;
+  position: relative;
   &__logo-name {
     font-size: 3rem;
     font-weight: bold;
