--- a/app/assets/stylesheets/module/pc_header_menu.scss
+++ b/app/assets/stylesheets/module/pc_header_menu.scss
@@ -8,7 +8,7 @@
   position: relative;
   gap: 15px;
   align-items: center;
-
+  height: 50px;
   &__user-icon {
     border-radius: 50%;
   }
@@ -22,9 +22,9 @@
 .hover-menu-list:hover {
   .hover-menu-list {
     display: block;
-    position: fixed;
-    top: 60px;
-    right: 5vw;
+    position: absolute;
+    top: 50px;
+    right: 0;
     width: 240px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     z-index: 500;
